[package]
name            = "stalin-binary-search"
description     = "alike binary search but any checking element which is not target one is eliminated"
license         = "AGPL-3.0-only"
version         = "0.0.4"
authors         = ["Miezhiko <Miezhiko@gmail.com>"]
repository      = "https://github.com/Miezhiko/stalin-binary-search"
edition         = "2021"
rust-version    = "1.56.0"

[lib]
doctest = false

[dev-dependencies]
rand = "0.8"
